--- a/project/shared.css
+++ b/project/shared.css
@@ -1,130 +1,230 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-
 body {
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+}
+
+main {
+  min-height: calc(100vh - 3.5rem - 8rem);
+  margin-top: 3.5rem;
+}
+
+.backdrop {
+  position: fixed;
+  display: none;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .main-header {
-    background-color: #2ddf5c;
-    width: 100%;
-    padding: 8px 16px;
-    /*
-    8px is top-bottom padding, 16px is left-right padding
-     */
-    display: inline-block;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #2ddf5c;
+  padding: 0.5rem 1rem;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.main-header__div {
-    display: inline-block;
-    vertical-align: middle;
-    /*
-    this will be aligned in the middle in couple with main-header__nav
-     */
+.toggle-button {
+  width: 3rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding-top: 0;
+  padding-bottom: 0;
+  vertical-align: middle;
 }
 
-.main-header__brand_name {
-    color: #0e4f1f;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 22px;
+.toggle-button:focus {
+  outline: none;
 }
 
-.main-header__nav {
-    display: inline-block;
-    text-align: right;
-    width: calc(100% - 74px);
-    vertical-align: middle;
+.toggle-button__bar {
+  width: 100%;
+  height: 0.2rem;
+  background: black;
+  display: block;
+  margin: 0.6rem 0;
+}
+
+.main-header__brand {
+  color: #0e4f1f;
+  text-decoration: none;
+  font-weight: bold;
+  /*font-size: 1.5rem;*/
+  height: 3.5rem;
+  /* width: 20px; */
+}
+
+.main-header__brand img {
+  height: 2.5rem;
+  vertical-align: middle;
+  /* width: 100%; */
+}
+
+.main-nav {
+  display: none;
 }
 
 .main-nav__items {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
 }
 
 .main-nav__item {
-    display: inline-block;
-    padding: 0 15px;
+  display: inline-block;
+  margin: 0 1rem;
 }
 
-.main-nav__item a {
-    color: #0e4f1f;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 3px 0;
+.main-nav__item a,
+.mobile-nav__item a {
+  text-decoration: none;
+  color: #0e4f1f;
+  font-weight: bold;
+  padding: 0.2rem 0;
 }
 
-
-.main-nav__item a:active,
-.main-nav__item a:hover {
-    color: white;
-    border-bottom: 5px solid white;
+.main-nav__item a:hover,
+.main-nav__item a:active {
+  color: white;
+  border-bottom: 5px solid white;
 }
 
-/*
-CTA - CALL TO ACTION
- */
-.main-nav__item--cta a {
-    color: white;
-    background-color: #ff1b68;
-    padding: 8px 16px;
-    border-radius: 8px;
+.main-nav__item--cta a,
+.mobile-nav__item--cta a {
+  color: white;
+  background: #ff1b68;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
 }
 
 .main-nav__item--cta a:hover,
-.main-nav__item--cta a:active {
-    color: #ff1b68;
-    background-color: white;
-    border: none;
+.main-nav__item--cta a:active,
+.mobile-nav__item--cta a:hover,
+.mobile-nav__item--cta a:active {
+  color: #ff1b68;
+  background: white;
+  border: none;
+}
+
+.main-footer {
+  background: black;
+  padding: 2rem;
+  margin-top: 3rem;
+}
+
+.main-footer__links {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.main-footer__link {
+  /*margin: 0 1rem;*/
+  margin: 0.5rem 0;
+}
+
+.main-footer__link a {
+  color: white;
+  text-decoration: none;
+}
+
+.main-footer__link a:hover,
+.main-footer__link a:active {
+  color: #ccc;
 }
 
 
+.mobile-nav {
+  display: none;
+  position: fixed;
+  z-index: 101;
+  top: 0;
+  left: 0;
+  background: white;
+  width: 80%;
+  height: 100vh;
+}
+
+.mobile-nav__items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+  height: 100%;
+  list-style: none;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.mobile-nav__item {
+  margin: 1rem 0;
+}
+
+.mobile-nav__item a {
+  font-size: 1.5rem;
+}
+
 .button {
-    font: inherit;
-    padding: 7px;
-    background-color: #0e4f1f;
-    border: 2px solid #0e4f1f;
-    border-radius: 10px;
-    color: whitesmoke;
-    font-weight: bold;
-    font-size: 15px;
-    cursor: pointer;
+  background: #0e4f1f;
+  color: white;
+  font: inherit;
+  border: 1.5px solid #0e4f1f;
+  padding: 0.5rem;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .button:hover,
 .button:active {
-    background-color: white;
-    color: #0e4f1f;
+  background: white;
+  color: #0e4f1f;
 }
 
-.main-footer {
-    background-color: black;
-    padding: 32px;
-    margin-top: 48px;
+.button:focus {
+  outline: none;
 }
 
-.main-footer__links {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    text-align: center;
+.open {
+  display: block !important;
 }
 
-.main-footer__link {
-    display: inline-block;
-    margin: 0 16px;
-}
+@media (min-width: 42.7rem) {
 
-.main-footer__link a {
-    text-decoration: none;
-    color: white;
-}
+  .main-nav {
+    display: flex;
+  }
 
-.main-footer__link a:hover,
-.main-footer__link a:active{
-    color: #ccc;
+  .toggle-button {
+    display: none;
+  }
+
+  .main-footer__links {
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main-footer__link {
+    margin: 0 1rem;
+  }
 }
